[package]
name = "ply_jobs"
version = "0.1.4"
edition = "2021"
description = "This crate provides the ability to run background jobs on a schedule."
license = "MIT-0"

[features]
mongodb = ["dep:mongodb"]
pickledb = ["dep:pickledb"]

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "sync", "net"] }
tokio-retry = "0.3"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
futures = { version = "0.3", default-features = false }
chrono = {version = "0.4.31", features = ["default"]}
cron = "0.12.0"
tokio-timer = "0.2.13"
log = "0.4.20"
simple_logger = "4.2.0"
thiserror = "1"
rand = "0.8"
serde_json = "1.0.109"
base64 = "0.21.5"
mongodb = { version = "2.6.0" , optional = true }
pickledb = { version = "0.5.1", optional = true }
futures-util = "0.3.30"

[dev-dependencies]
reqwest = "0.11.23"

[[example]]
name = "counter"
required-features = ["mongodb"]
